# simplebank

./: .env  Cargo.toml  Justfile  docker-compose.yaml
.github/workflows/: ci.yaml
docs/: account.http
migrations/: 00001_init_schema.down.sql  00001_init_schema.up.sql
src/: db.rs  error.rs  main.rs  model.rs  models.rs  prelude.rs  util.rs  utils.rs
src/api/: router.rs  server.rs
src/db/: account_sql.rs  entry_sql.rs  store.rs  transfer_sql.rs
src/handlers/: account.rs
