[package]
name = "simplebank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "ws", "macros", "multipart"] }
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "tls-rustls",
    "postgres",
    "time",
    "chrono",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tower-http = "0.5"
serde_json = "1.0.114"
strum_macros = "0.26.1"

[dev-dependencies]
